syntax = "proto3";

package grpc;

option go_package = "github.com/fabiusinfo/SquidGame/proto";

service SquidGameService {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}